--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,4 +27,4 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPMJS_PUBLISH_SECRET}}
       - run: npm install
-      - run: npm publish
+      - run: npm publish --access public
